--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/default-styles.css">
     <link rel="stylesheet" href="css/style.css">
+    
+    <meta name="description" content="Описание страницы">
+    <meta name="keywords" content="Ключевые слова для яндекс">
+    <meta name="googlebot" content="notranslate">
+    
     <title>Евразия - лендинг горнолыжного курорта</title>
 </head>
 <body>
@@ -100,7 +105,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="news__btn">
                 <button class="btn show-more" type="button">Посмотреть еще</button>
             </div>
@@ -114,9 +118,10 @@
             <div class="tape__item accordion__list">
                 <div class="tape__col accordion">
                     <div class="tape__body">
-                        <div class="tape__img">
+                        <picture class="tape__img">
+                            <source srcset="img/tape/tape-1.webp" type="image/webp">
                             <img src="img/tape/tape-1.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="tape__date">29 Января 2023</div>
                         <div class="tape__content">
                             <button class="accordion__control" aria-expanded="false">
@@ -131,9 +136,10 @@
                 </div>
                 <div class="tape__col accordion">
                     <div class="tape__body">
-                        <div class="tape__img">
+                        <picture class="tape__img">
+                            <source srcset="img/tape/tape-2.webp" type="image/webp">
                             <img src="img/tape/tape-2.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="tape__date">18 Января 2023</div>
                         <div class="tape__content">
                             <button class="accordion__control" aria-expanded="false">
@@ -148,9 +154,10 @@
                 </div>
                 <div class="tape__col accordion">
                     <div class="tape__body">
-                        <div class="tape__img">
+                        <picture class="tape__img">
+                            <source srcset="img/tape/tape-3.webp" type="image/webp">
                             <img src="img/tape/tape-3.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="tape__date">17 Января 2023</div>
                         <div class="tape__content">
                             <button class="accordion__control" aria-expanded="false">
@@ -165,9 +172,10 @@
                 </div>
                 <div class="tape__col accordion">
                     <div class="tape__body">
-                        <div class="tape__img">
+                        <picture class="tape__img">
+                            <source srcset="img/tape/tape-4.webp" type="image/webp">
                             <img src="img/tape/tape-4.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="tape__date">17 Января 2023</div>
                         <div class="tape__content">
                             <button class="accordion__control" aria-expanded="false">
@@ -182,9 +190,10 @@
                 </div>
                 <div class="tape__col accordion">
                     <div class="tape__body">
-                        <div class="tape__img">
+                        <picture class="tape__img">
+                            <source srcset="img/tape/tape-5.webp" type="image/webp">
                             <img src="img/tape/tape-5.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="tape__date">16 Января 2023</div>
                         <div class="tape__content">
                             <button class="accordion__control" aria-expanded="false">
@@ -204,9 +213,10 @@
                 </div>
                 <div class="tape__col accordion">
                     <div class="tape__body">
-                        <div class="tape__img">
+                        <picture class="tape__img">
+                            <source srcset="img/tape/tape-6.webp" type="image/webp">
                             <img src="img/tape/tape-6.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="tape__date">28 Декабря 2022</div>
                         <div class="tape__content">
                             <button class="accordion__control" aria-expanded="false">
@@ -231,24 +241,28 @@
             <div class="swiper-container1">
             <div class="swiper-wrapper">
                 <div class="swiper-slide card--5">
-                    <div class="swiper__img">
+                    <picture class="swiper__img">
+                        <source srcset="img/gallery/gallery_1.webp" type="image/webp">
                         <img src="img/gallery/gallery_1.jpg" alt="">
-                    </div>
+                    </picture>
                 </div>
                 <div class="swiper-slide card--6">
-                    <div class="swiper__img">
+                    <picture class="swiper__img">
+                        <source srcset="img/gallery/gallery_2.webp" type="image/webp">
                         <img src="img/gallery/gallery_2.jpg" alt="">
-                    </div>
+                    </picture>
                 </div>
                 <div class="swiper-slide card--7">
-                    <div class="swiper__img">
+                    <picture class="swiper__img">
+                        <source srcset="img/gallery/gallery_3.webp" type="image/webp">
                         <img src="img/gallery/gallery_3.jpg" alt="">
-                    </div>
+                    </picture>
                 </div>
                 <div class="swiper-slide card--8">
-                    <div class="swiper__img">
+                    <picture class="swiper__img">
+                        <source srcset="img/gallery/gallery_4.webp" type="image/webp">
                         <img src="img/gallery/gallery_4.jpg" alt="">
-                    </div>
+                    </picture>
                 </div>
             </div>
             <div class="swiper-pagination pag-2"></div>
@@ -276,9 +290,10 @@
                 <div class="tape__item">
                     <div class="tape__col">
                         <div class="tape__body">
-                            <div class="tape__img">
+                            <picture class="tape__img">
+                                <source srcset="img/tape/tape-1.webp" type="image/webp">
                                 <img src="img/tape/tape-1.jpg" alt="">
-                            </div>
+                            </picture>
                             <div class="tape__date">29 Января 2023</div>
                             <div class="tape__content">
                                 <h3 class="tape__title">В ЦАО "Евразия" состоялось Первенство Челябинской области и УрФО по горнолыжному спорту сезона 2022-2023</h3>
@@ -291,9 +306,10 @@
                     </div>
                     <div class="tape__col">
                         <div class="tape__body">
-                            <div class="tape__img">
+                            <picture class="tape__img">
+                                <source srcset="img/tape/tape-2.webp" type="image/webp">
                                 <img src="img/tape/tape-2.jpg" alt="">
-                            </div>
+                            </picture>
                             <div class="tape__date">18 Января 2023</div>
                             <div class="tape__content">
                                 <h3 class="tape__title">В ЦАО "Евразия" состоялось Первенство России по сноуборду в дисциплине Big-Air</h3>
@@ -306,9 +322,10 @@
                     </div>
                     <div class="tape__col">
                         <div class="tape__body">
-                            <div class="tape__img">
+                            <picture class="tape__img">
+                                <source srcset="img/tape/tape-3.webp" type="image/webp">
                                 <img src="img/tape/tape-3.jpg" alt="">
-                            </div>
+                            </picture>
                             <div class="tape__date">17 Января 2023</div>
                             <div class="tape__content">
                                 <h3 class="tape__title">Всероссийские соревнования и Первенство города Куса по сноуборду в дисциплинах PSL и PGS в ЦАО "Евразия" 8-11 февраля 2023</h3>
@@ -332,9 +349,10 @@
                 <div class="tape__item">
                     <div class="tape__col">
                         <div class="tape__body">
-                            <div class="tape__img">
+                            <picture class="tape__img">
+                                <source srcset="img/tape/tape-4.webp" type="image/webp">
                                 <img src="img/tape/tape-4.jpg" alt="">
-                            </div>
+                            </picture>
                             <div class="tape__date">17 Января 2023</div>
                             <div class="tape__content">
                                 <h3 class="tape__title">В ЦАО "Евразия" состоится Чемпионат и Первенство Челябинской области по горнолыжному спорту</h3>
@@ -347,9 +365,10 @@
                 </div>
                 <div class="tape__col">
                     <div class="tape__body">
-                        <div class="tape__img">
-                            <img src="img/tape/tape-5.jpg" alt="">
-                        </div>
+                        <picture class="tape__img">
+                                <source srcset="img/tape/tape-5.webp" type="image/webp">
+                                <img src="img/tape/tape-5.jpg" alt="">
+                            </picture>
                         <div class="tape__date">16 Января 2023</div>
                         <div class="tape__content">
                             <h3 class="tape__title">"Кубок Уральских гор 2023" в ЦАО "Евразия"</h3>
@@ -367,9 +386,10 @@
                 </div>
                 <div class="tape__col">
                     <div class="tape__body">
-                        <div class="tape__img">
-                            <img src="img/tape/tape-6.jpg" alt="">
-                        </div>
+                        <picture class="tape__img">
+                                <source srcset="img/tape/tape-6.webp" type="image/webp">
+                                <img src="img/tape/tape-6.jpg" alt="">
+                            </picture>
                         <div class="tape__date">28 Декабря 2022</div>
                         <div class="tape__content">
                             <h3 class="tape__title">30 декабря открытие 2 склона! Какие еще трассы будут работать с 30 декабря?</h3>
@@ -390,9 +410,10 @@
                 <div class="tape__item">
                     <div class="tape__col">
                         <div class="tape__body">
-                            <div class="tape__img">
+                            <picture class="tape__img">
+                                <source srcset="img/tape/tape-1.webp" type="image/webp">
                                 <img src="img/tape/tape-1.jpg" alt="">
-                            </div>
+                            </picture>
                             <div class="tape__date">29 Января 2023</div>
                             <div class="tape__content">
                                 <h3 class="tape__title">В ЦАО "Евразия" состоялось Первенство Челябинской области и УрФО по горнолыжному спорту сезона 2022-2023</h3>
@@ -405,9 +426,10 @@
                     </div>
                     <div class="tape__col">
                         <div class="tape__body">
-                            <div class="tape__img">
+                            <picture class="tape__img">
+                                <source srcset="img/tape/tape-2.webp" type="image/webp">
                                 <img src="img/tape/tape-2.jpg" alt="">
-                            </div>
+                            </picture>
                             <div class="tape__date">18 Января 2023</div>
                             <div class="tape__content">
                                 <h3 class="tape__title">В ЦАО "Евразия" состоялось Первенство России по сноуборду в дисциплине Big-Air</h3>
@@ -420,9 +442,10 @@
                     </div>
                     <div class="tape__col">
                         <div class="tape__body">
-                            <div class="tape__img">
+                            <picture class="tape__img">
+                                <source srcset="img/tape/tape-3.webp" type="image/webp">
                                 <img src="img/tape/tape-3.jpg" alt="">
-                            </div>
+                            </picture>
                             <div class="tape__date">17 Января 2023</div>
                             <div class="tape__content">
                                 <h3 class="tape__title">Всероссийские соревнования и Первенство города Куса по сноуборду в дисциплинах PSL и PGS в ЦАО "Евразия" 8-11 февраля 2023</h3>
